--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -119,10 +119,10 @@
 <nav class="nav-tabs">
   <div class="nav-buttons">
     <button class="tab-button active" data-tab="home"><span class="tab-icon">👋</span>Home</button>
-    <a href="/playerlist" class="tab-button"><span class="tab-icon">⭐️</span>Player List</a>
-    <a href="/shifts" class="tab-button"><span class="tab-icon">🗓️</span>Shifts</a>
-    <a href="/account" class="tab-button"><span class="tab-icon">💫</span>My Account</a>
-    <a href="/settings" class="tab-button"><span class="tab-icon">🔗</span>Settings</a>
+    <a href="/dashboard/playerlist" class="tab-button"><span class="tab-icon">⭐️</span>Player List</a>
+    <a href="/dashboard/shifts" class="tab-button"><span class="tab-icon">🗓️</span>Shifts</a>
+    <a href="/dashboard/account" class="tab-button"><span class="tab-icon">💫</span>My Account</a>
+    <a href="/dashboard/settings" class="tab-button"><span class="tab-icon">🔗</span>Settings</a>
   </div>
   <div class="search-wrapper">
     <input type="text" id="playerSearch" placeholder="Search Roblox username...">
