--- a/web/views/myaccount.ejs
+++ b/web/views/myaccount.ejs
@@ -82,10 +82,10 @@
 <nav class="nav-tabs">
   <div class="nav-buttons">
     <a href="/" class="tab-button"><span class="tab-icon">👋</span>Home</a>
-    <a href="/playerlist" class="tab-button"><span class="tab-icon">⭐️</span>Player List</a>
-    <a href="/shifts" class="tab-button"><span class="tab-icon">🗓️</span>Shifts</a>
+    <a href="/dashboard/playerlist" class="tab-button"><span class="tab-icon">⭐️</span>Player List</a>
+    <a href="/dashboard/shifts" class="tab-button"><span class="tab-icon">🗓️</span>Shifts</a>
     <button class="tab-button active" data-tab="myaccount"><span class="tab-icon">💫</span>My Account</button>
-    <a href="/settings" class="tab-button"><span class="tab-icon">🔗</span>Settings</a>
+    <a href="/dashboard/settings" class="tab-button"><span class="tab-icon">🔗</span>Settings</a>
   </div>
   <div class="search-wrapper">
     <input type="text" id="playerSearch" placeholder="Search Roblox username...">
