--- a/web/views/settings.ejs
+++ b/web/views/settings.ejs
@@ -78,9 +78,9 @@
 <nav class="nav-tabs">
   <div class="nav-buttons">
     <a href="/" class="tab-button"><span class="tab-icon">👋</span>Home</a>
-    <a href="/playerlist" class="tab-button"><span class="tab-icon">⭐️</span>Player List</a>
-    <a href="/shifts" class="tab-button"><span class="tab-icon">🗓️</span>Shifts</a>
-    <a href="/account" class="tab-button"><span class="tab-icon">💫</span>My Account</a>
+    <a href="/dashboard/playerlist" class="tab-button"><span class="tab-icon">⭐️</span>Player List</a>
+    <a href="/dashboard/shifts" class="tab-button"><span class="tab-icon">🗓️</span>Shifts</a>
+    <a href="/dashboard/account" class="tab-button"><span class="tab-icon">💫</span>My Account</a>
     <button class="tab-button active" data-tab="settings"><span class="tab-icon">🔗</span>Settings</button>
   </div>
   <div class="search-wrapper">
